--- a/panda.html
+++ b/panda.html
@@ -8,7 +8,105 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+      <div class="container">
+        <!-- navication bar code here  -->
+        <nav class="navbar navbar-expand-lg bg-light mb-5">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="images/logo.png" alt="" >
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Product</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="#">
+                    About Us
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link ">Contact</a>
+                </li>
+              </ul>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+        <!-- nab code end here  -->
+        <!-- banner code stared here  -->
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            
+            <div class="carousel-item active bg-warning rounded-3">
+              <div class="row ">
+                <div class="col col-lg-7 ps-5 d-lg-flex align-items-center ">
+                  <div>
+                    <h1>Cool Dude Headphone</h1>
+                  <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                  <h1>$420</h1>
+                  <button class="btn btn-primary">Buy Now</button>
+                  </div>
+                </div>
+                <div class="col col-lg-5">
+                  <img aria-colcount="w-fluid" src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item bg-warning rounded-3">
+              <div class="row ">
+                <div class="col col-lg-7 ps-5 d-lg-flex align-items-center ">
+                  <div>
+                    <h1>Mi LED TV 4A PRO 32</h1>
+                  <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                  <h1>$1289</h1>
+                  <button class="btn btn-primary">Buy Now</button>
+                  </div>
+                </div>
+                <div class="col col-lg-5">
+                  <img aria-colcount="w-fluid" src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item bg-warning rounded-3">
+              <div class="row ">
+                <div class="col col-lg-7 ps-5 d-lg-flex align-items-center ">
+                  <div>
+                    <h1>X-box for your living room</h1>
+                  <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                  <h1>$400</h1>
+                  <button class="btn btn-primary">Buy Now</button>
+                  </div>
+                </div>
+                <div class="col col-lg-5">
+                  <img aria-colcount="w-fluid" src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <!-- banner code end here  -->
+
+      </div>
+    </header>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
