--- a/panda.html
+++ b/panda.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Panda Ecommarce</title>
+    <!-- favicon added link  -->
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
@@ -11,7 +13,7 @@
     <header>
       <div class="container">
         <!-- navication bar code here  -->
-        <nav class="navbar navbar-expand-lg bg-light mb-5">
+        <nav class="navbar fixed-top navbar-expand-lg bg-light mb-5">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
               <img src="images/logo.png" alt="" >
@@ -45,8 +47,8 @@
         </nav>
         <!-- nab code end here  -->
         <!-- banner code stared here  -->
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
+        <div id="carouselExampleControls" class="carousel slide py-5" data-bs-ride="carousel">
+          <div class="carousel-inner my-5">
             
             <div class="carousel-item active bg-warning rounded-3">
               <div class="row ">
@@ -104,10 +106,91 @@
           </button>
         </div>
         <!-- banner code end here  -->
-
       </div>
     </header>
+<main>
+  <!-- catagori section here  -->
+  <section class="my-5">
+    <div class="container">
+      <div class="catagori-titale m-4">
+        <h1>Categoris</h1>
+      </div>
+      <div class="row row-lg-cols-4 row-cols-sm-12 gap-5">
+        <div class="col p-4 bg-warning rounded">
+          <div class="d-flex justify-content-around align-items-center">
+            <div class="co">
+              <h2 class="text-white fs-1">Watch</h2>
+            </div>
+            <div class="cl">
+              <img class="img-flui" src="images/categories/watch.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col p-4 bg-success rounded">
+          <div class="d-flex justify-content-around align-items-center">
+            <div class="cl">
+              <h2 class="text-white fs-1">Shoes</h2>
+            </div>
+            <div class="cl">
+              <img class="img-flui" src="images/categories/shoes.png" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col p-4 bg-primary rounded">
+          <div class="d-flex justify-content-around align-items-center">
+            <div class="">
+              <h2 class="text-white fs-1">Bag</h2>
+            </div>
+            <div class="">
+              <img class="img-flui" src="images/categories/bag.png" alt="">
+            </div>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </section>
 
+  <!-- shoes collection -->
+  <section class="py-5">
+    <div class="container">
+      <div class="catagori-titale m-4 d-flex justify-content-between">
+        <h1>Shoes</h1>
+        <span class="text-danger d-none d-lg-block ">See All</span>
+      </div>
+      <div class="card-group gap-5">
+
+        <div class="card border border-0 shadow-lg col-md">
+          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title fs-3">Reebok Dart Men’s Shoes</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h2 class="mb-4">$1249</h2>
+            <button class="btn btn-warning text-white">Buy Now</button>
+          </div>
+        </div>
+        <div class="card border border-0 shadow-lg">
+          <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title fs-3">Reebok All Terrain</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h2 class="mb-4">$759</h2>
+            <button class="btn btn-warning text-white">Buy Now</button>
+          </div>
+        </div>
+        <div class="card border border-0 shadow-lg">
+          <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title fs-3">Reebok Pump</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h2 class="mb-4">$859</h2>
+            <button class="btn btn-warning text-white">Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
